# legal-doc-assistant

./: .gitignore  README.md  app.py  packages.txt.txt  pyproject.toml  requirements.txt  usage.txt
legal_chatbot/: app.py  config.py  main.py
legal_chatbot/agents/: classifier.py
legal_chatbot/chatbot/: chatbot.py
legal_chatbot/document_processing/: processor.py
legal_chatbot/models/: query_models.py
legal_chatbot/workflow/: graph.py
